style: fix styles cards table for overflow content

--- a/src/pages/packs/packsList/PackList.module.scss
+++ b/src/pages/packs/packsList/PackList.module.scss
@@ -30,8 +30,7 @@
 
   box-sizing: border-box;
   padding: 15px 10px;
-
-
+  word-wrap: break-word;
 }
 
 .name, .table td:nth-child(1){
